--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
+    "multer": "^1.4.5-lts.1",
     "punycode": "^2.3.1"
   },
   "devDependencies": {
