--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1",
-    "punycode": "^2.3.1"
+    "punycode": "^2.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
