--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1",
     "punycode": "^2.3.1",
+    "stripe": "^14.13.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
